[package]
name = "array_map"
version = "0.2.1"
authors = ["Tyler Hawkes <tyler.hawkes@gmail.com>"]
edition = "2018"
resolver = "2"
description = "Map backed array for fixed size keys with O(1) performance"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tylerhawkes/array_map"
documentation = "https://docs.rs/array_map"
readme = "README.md"
keywords = ["no_std", "no-std", "data", "structure", "map"]
categories = ["data-structures", "embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["array_map_derive"]

[dependencies]
array_map_derive = { version = "0.2", optional = true, path = "array_map_derive" }
serde = { version = "1", optional = true, default_features = false, features = ["derive"] }

[features]
derive = ["array_map_derive"]
std = []

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
